tests/paczka1/small_fuzzy/34972865.err
Error in line 1: 4mNh S819 23,2
Error in line 5: CahD AD91 76,0
Error in line 6: CahD A391 99,6
Error in line 9: S287 A461 64,3
Error in line 4: 4mNh S81	 85,8
